src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__diff_licenses_80x24.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
sbom-tools  DIFF  │ acme-webapp@1.0.0 ⟷ acme-webapp@2.0.0

 [1] Summary   │  [2] Components   │  [3] Dependencies   │  [4] Licenses   │  [5

────────────────────────────────────────────────────────────────────────────────
Group:  License   Sort: License  │  Risk:  All   │  Compat:  Off   │  Focus:  Ne

────────────────────────────────────────────────────────────────────────────────
┌──────────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                       ✓                                      │
│                                                                              │
│                          No license changes detected                         │
│                                                                              │
│                All licenses remain the same between both SBOMs               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 Components: 13 │ Vulns: 0 │ Score: 53.5
 g group  s sort  r risk  c compat  Tab panel │  Tab switch  / search  e export
