src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__diff_quality_120x40.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
sbom-tools  DIFF  │ acme-webapp@1.0.0 ⟷ acme-webapp@2.0.0

 [1] Summary   │  [2] Components   │  [3] Dependencies   │  [4] Licenses   │  [5] Vulnerabilities   │  [6] Quality   │

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Quality: 49/100 (F) → 49/100 (F)   ──────────────────────────────────────────────────────────────────────────────────┐
│ Old: █████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  49%  Old│
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│ New: █████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  49%  New│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Category Scores ─────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       Old   New  Delta Weight                                                        │
│ Identifiers    █████████████████░░░   89%   89%         ×20%                                                         │
│ Licenses       ████████████████░░░░   83%   83%         ×12%                                                         │
│ Completeness   ██████████░░░░░░░░░░   51%   51%         ×25%                                                         │
│ Provenance     █░░░░░░░░░░░░░░░░░░░   10%   10%         ×10%   ⚠low                                                  │
│ Dependencies   ░░░░░░░░░░░░░░░░░░░░    0%    0%         ×10%   ✗                                                     │
│ Integrity      ░░░░░░░░░░░░░░░░░░░░    0%    0%         ×8%    ✗                                                     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Quality Analysis ────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ → Quality score unchanged                                                                                            │
│                                                                                                                      │
│                                                                                                                      │
│ Top Actions to Improve Score:                                                                                        │
│▶ [P1] Fix 1 compliance error(s) to meet Standard requirements (+20pts)  Compliance                                   │
│  [P2] Add SBOM creation tool information (+8pts)  Provenance                                                         │
│  [P2] Add PURL or CPE identifiers to components (+2pts)  Identifiers                                                 │
│  [P3] Add VCS (source repository) URLs to components (+5pts)  Provenance                                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Components: 15 │ Vulns: 0 │ Score: 53.5
             v view │  Tab switch  / search  e export  ? help  q quit [y] copy Fix 1 compliance error(s) t...
